--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">portfolio</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Communication</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#about">소개</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#experience">경력</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#education">교육</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#skills">기술</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#interests">포트폴리오</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#awards">연락</a></li>
                 </ul>
             </div>
         </nav>
@@ -78,7 +78,7 @@
                             <p class="myfont">9. 블로그 및 커뮤니티 관리</p>
                             <p class="myfont">10. 간단한 회사소개 페이지, 협약페이지 제작</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2020.08 ~ 2022.10</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary" style="font-weight: 700;">2020.08 ~ 2022.10</span></div>
                     </div>
                     <!-- 사용x -->
                     <!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -123,7 +123,7 @@
                             <p class="myfont">4. 콘텐츠 구현 데이터 저장 및 웹 구현(Github)</p>
                             <p class="myfont">5. UX/UI 디자인 실무 (기획 ~ 구현)</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2020.01.16 ~ 2020.06.17</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary" style="font-weight: 700;">2020.01.16 ~ 2020.06.17</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -137,7 +137,7 @@
                             <p class="myfont">5. 서버사이드 컴포넌트 구현 및 개발 (Servlet & JSP, MVC, open api)</p>
                             <p class="myfont">6. 알고리즘 (java)</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2022.12.26 ~ 2023.05.09</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary" style="font-weight: 700;">2022.12.26 ~ 2023.05.09</span></div>
                     </div>
                 </div>
             </section>
@@ -188,16 +188,17 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">portfolio</h2>
-                    <p><a target="_blank" class="myfont" style="font-weight: 700; text-decoration: none;" href="https://santa2224.github.io/portfolio/">UX/UI 개인프로젝트</a></p>
+                    <p><a target="_blank" class="myfont" style="font-weight: 700; text-decoration: none;">통합 포트폴리오</a></p>
                     <!-- 노션만들어서 넣기 -->
-                    <p class="mb-0"><a class="myfont" style="font-weight: 700; text-decoration: none;"  href="#">backend project</a></p>
+                    <p><a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="#">backend project</a></p>
+                    <p class="mb-0"><a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://santa2224.github.io/portfolio/">UX/UI 개인프로젝트</a></p>
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Communication</h2>
+                    <h2 class="mb-5">연락</h2>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-phone text-warning"></i></span>
