--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#about">소개</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#experience">경력</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#education">교육</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#skills">기술</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#interests">포트폴리오</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#awards">연락</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#skills">Skill</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#interests">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#awards">Communication</a></li>
                 </ul>
             </div>
         </nav>
@@ -188,7 +188,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">portfolio</h2>
-                    <p><a target="_blank" class="myfont" style="font-weight: 700; text-decoration: none;">통합 포트폴리오</a></p>
+                    <p><a target="_blank" class="myfont" style="font-weight: 700; text-decoration: none;" href="#">통합 포트폴리오</a></p>
                     <!-- 노션만들어서 넣기 -->
                     <p><a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="#">backend project</a></p>
                     <p class="mb-0"><a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://santa2224.github.io/portfolio/">UX/UI 개인프로젝트</a></p>
@@ -198,7 +198,7 @@
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">연락</h2>
+                    <h2 class="mb-5">communication</h2>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-phone text-warning"></i></span>
