--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#experience">Work Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#skills">Skill</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#interests">Portfolio</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#awards">Communication</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger myfont" style="font-weight: 400;" href="#awards">contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -62,7 +62,7 @@
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
+                    <h2 class="mb-5">Work Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0 myfont">원라인에듀</h3>
@@ -198,7 +198,7 @@
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">communication</h2>
+                    <h2 class="mb-5">contact</h2>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-phone text-warning"></i></span>
