--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
                     <!-- 노션만들어서 넣기 -->
                     <p><a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="#">backend project</a></p>
                     <p>
-                        <a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://www.figma.com/proto/LMizg3YPK3HPaTFNZ9DTjs/(%EA%B8%B0%ED%9A%8D)LMS-%EA%B8%B0%ED%9A%8D%2F%EA%B0%9C%EB%B0%9C-UX%2FUI?page-id=0%3A1&type=design&node-id=1-3&viewport=212%2C572%2C0.07&t=ZwBioONps919oH8K-1&scaling=min-zoom&starting-point-node-id=1%3A3&mode=design">
-                            자체 LMS 기획
+                        <a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://rift-creator-fa9.notion.site/LMS-HRD-41c6030be69e47a99860e6499ac68f49?pvs=4">
+                            LMS 프로그램 기획(HRD)
                         </a>
                     </p>
                     <p class="mb-0"><a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://santa2224.github.io/portfolio/">UX/UI 개인프로젝트</a></p>
