--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         <meta name="author" content="" />
         <title>PM_유인준</title>
         <link rel="icon" type="image/x-icon" href="assets/img/animal.ico" />
+        <!-- sns공유 섬네일 -->
+        <meta property="og:title" content="PM_유인준">
+        <meta property="og:url" content="https://santa2224.github.io/PM_portfolio/">
+        <meta property="og:image" content="assets/img/main_img.png">
+        <meta property="og:description" content="안녕하세요. 포트폴리오를 봐주셔서 감사합니다.">
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
