--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">portfolio</h2>
-                    <p><a target="_blank" class="myfont" style="font-weight: 700; text-decoration: none;" href="#">통합 포트폴리오</a></p>
+                    <!-- <p><a target="_blank" class="myfont" style="font-weight: 700; text-decoration: none;" href="#">통합 포트폴리오</a></p> -->
                     <!-- 노션만들어서 넣기 -->
                     <p><a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="#">backend project</a></p>
                     <p>
