--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <h2 class="mb-5">portfolio</h2>
                     <!-- <p><a target="_blank" class="myfont" style="font-weight: 700; text-decoration: none;" href="#">통합 포트폴리오</a></p> -->
                     <!-- 노션만들어서 넣기 -->
-                    <p><a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://spiced-utensil-e0c.notion.site/Backend-Team-Project-94e94a1b02434be29b1c1684f9eecf86?pvs=4">Backend Team Project</a></p>
+                    <p><a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://www.notion.so/Backend-Team-Project-aa6859f197824d3a820e07369a59c36a?pvs=4>Backend Team Project</a></p>
                     <p>
                         <a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://spiced-utensil-e0c.notion.site/LMS-HRD-c017bab722984052ba6ed4ae59dc6880?pvs=4">
                             LMS 프로그램 기획(HRD)
