--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                             Backend Team Project
                         </a>
                     </p>
-                        <a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://spiced-utensil-e0c.notion.site/LMS-HRD-c017bab722984052ba6ed4ae59dc6880?pvs=4">
+                        <a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://rift-creator-fa9.notion.site/LMS-HRD-41c6030be69e47a99860e6499ac68f49">
                             LMS 프로그램 기획(HRD)
                         </a>
                     </p>
