--- a/index.html
+++ b/index.html
@@ -196,15 +196,19 @@
                     <!-- <p><a target="_blank" class="myfont" style="font-weight: 700; text-decoration: none;" href="#">통합 포트폴리오</a></p> -->
                     <!-- 노션만들어서 넣기 -->
                     <p>
+                        <a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://www.figma.com/proto/8t8yJEImOCh8TfBV9pto5O/%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4?page-id=0%3A1&node-id=14-8&viewport=10%2C282%2C0.1&t=YQwekx8kog4jARkV-1&scaling=contain">
+                            PM포트폴리오
+                        </a>
+                    </p>
                         <a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://rift-creator-fa9.notion.site/Backend-Team-Project-aa6859f197824d3a820e07369a59c36a?pvs=4">
-                            Backend Team Project
+                            Backend 포트폴리오
                         </a>
                     </p>
-                        <a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://rift-creator-fa9.notion.site/LMS-HRD-41c6030be69e47a99860e6499ac68f49">
-                            LMS 프로그램 기획(HRD)
+                    <p class="mb-0">
+                        <a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://santa2224.github.io/portfolio/">
+                            UX/UI 포트폴리오
                         </a>
                     </p>
-                    <p class="mb-0"><a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://santa2224.github.io/portfolio/">UX/UI 개인프로젝트</a></p>
                 </div>
             </section>
             <hr class="m-0" />
