--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="resume-section-content">
                     <br>
                     <h1 class="mb-0 myfont">
-                        부족함을 채워가는 
+                        데이터 분석과 사용자 이해로 차별화된 서비스를 만드는  
                         <span class="text-primary">기획자</span>
                     </h1>
                     <div class="subheading mb-5">
@@ -70,31 +70,36 @@
                     <h2 class="mb-5">Work Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0 myfont">원라인에듀</h3>
-                            <div class="subheading mb-3 myfont">교육운영팀 사원</div>
-                            <p class="myfont">1. 홈페이지 전체적 이미지관리</p>
-                            <p class="myfont">2. 서버관리</p>
+                            <h3 class="mb-0 myfont">수브이</h3>
+                            <div class="subheading mb-3 myfont">정보기획팀/사원</div>
+                            <p class="myfont">1. UX/UI기획</p>
+                            <p class="myfont">2. CS 고객응대 업무</p>
                             <p class="myfont">3. 보안 계약관리(SSL, UTM 등)</p>
                             <p class="myfont">4. 디자인 업무 (SNS홍보, 명함, 홈페이지 디자인, 홍보물 등)</p>
-                            <p class="myfont">5. LMS개발 진행 중 메인기획</p>
-                            <p class="myfont">6. 인증평가 진행 시 문서정리 및 전산관리자 투입 및 내용설명</p>
-                            <p class="myfont">7. 콘텐츠 정리 및 콘텐츠 서버 관리</p>
-                            <p class="myfont">8. 영업자 응대 및 CS</p>
-                            <p class="myfont">9. 블로그 및 커뮤니티 관리</p>
-                            <p class="myfont">10. 간단한 회사소개 페이지, 협약페이지 제작</p>
+                            <p class="myfont">5. 인증평가 진행 시 문서정리 및 전산관리자 투입 및 내용설명</p>
+                            <p class="myfont">6. 콘텐츠 정리 및 콘텐츠 서버 관리</p>
+                            <p class="myfont">7. 블로그 및 커뮤니티 관리</p>
+                            <p class="myfont">8.  간단한 회사소개 페이지, 협약페이지 제작</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary" style="font-weight: 700;">2020.08 ~ 2022.10</span></div>
                     </div>
                     <!-- 사용x -->
-                    <!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0 myfont">원라인에듀</h3>
+                            <div class="subheading mb-3 myfont">교육운영팀,콘텐츠관리팀/사원</div>
+                            <p class="myfont">1. 서비스 기획</p>
+                            <p class="myfont">2. CS 고객응대 업무</p>
+                            <p class="myfont">3. 보안 계약관리(SSL, UTM 등)</p>
+                            <p class="myfont">4. 디자인 업무 (SNS홍보, 명함, 홈페이지 디자인, 홍보물 등)</p>
+                            <p class="myfont">5. 인증평가 진행 시 문서정리 및 전산관리자 투입 및 내용설명</p>
+                            <p class="myfont">6. 콘텐츠 정리 및 콘텐츠 서버 관리</p>
+                            <p class="myfont">7. 블로그 및 커뮤니티 관리</p>
+                            <p class="myfont">8.  간단한 회사소개 페이지, 협약페이지 제작</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Junior Web Designer</h3>
                             <div class="subheading mb-3">Shout! Media Productions</div>
@@ -197,7 +202,7 @@
                     <!-- <p><a target="_blank" class="myfont" style="font-weight: 700; text-decoration: none;" href="#">통합 포트폴리오</a></p> -->
                     <!-- 노션만들어서 넣기 -->
                     <p>
-                        <a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://www.figma.com/proto/8t8yJEImOCh8TfBV9pto5O/%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4?page-id=0%3A1&node-id=14-8&viewport=10%2C282%2C0.1&t=YQwekx8kog4jARkV-1&scaling=contain">
+                        <a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://www.figma.com/proto/8t8yJEImOCh8TfBV9pto5O/%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4?page-id=0%3A1&node-id=14-8&viewport=-102%2C352%2C0.12&t=UVsEc4jYYetdTZ0K-1&scaling=contain&content-scaling=fixed">
                             PM포트폴리오
                         </a>
                     </p>
