--- a/index.html
+++ b/index.html
@@ -72,16 +72,10 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0 myfont">수브이</h3>
                             <div class="subheading mb-3 myfont">정보기획팀/사원</div>
-                            <p class="myfont">1. UX/UI기획</p>
-                            <p class="myfont">2. CS 고객응대 업무</p>
-                            <p class="myfont">3. 보안 계약관리(SSL, UTM 등)</p>
-                            <p class="myfont">4. 디자인 업무 (SNS홍보, 명함, 홈페이지 디자인, 홍보물 등)</p>
-                            <p class="myfont">5. 인증평가 진행 시 문서정리 및 전산관리자 투입 및 내용설명</p>
-                            <p class="myfont">6. 콘텐츠 정리 및 콘텐츠 서버 관리</p>
-                            <p class="myfont">7. 블로그 및 커뮤니티 관리</p>
-                            <p class="myfont">8.  간단한 회사소개 페이지, 협약페이지 제작</p>
+                            <p class="myfont">1. 요구 사항 정의서 기준 MEGATREND 화면 설계 프로젝트 진행</p>
+                            <p class="myfont">2. GPT를 활용한 논문 특허 데이터 해석 업무 및 분류</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary" style="font-weight: 700;">2020.08 ~ 2022.10</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary" style="font-weight: 700;">2023.12 ~ 2024.05</span></div>
                     </div>
                     <!-- 사용x -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
