--- a/index.html
+++ b/index.html
@@ -91,17 +91,18 @@
                             <p class="myfont">7. 블로그 및 커뮤니티 관리</p>
                             <p class="myfont">8.  간단한 회사소개 페이지, 협약페이지 제작</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary" style="font-weight: 700;">2020.08 ~ 2022.10</span></div>
                     </div>
-                    <!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">윌비소프트</h3>
+                            <div class="subheading mb-3">정보기술기획팀/인턴</div>
+                            <p class="myfont">1. 관리자 모듈 VIP 서비스 기획</p>
+                            <p class="myfont">2. 사용자 모듈 VIP 서비스 기획</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary" style="font-weight: 700;">2023.11 ~ 2023.12</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <!-- <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Web Design Intern</h3>
                             <div class="subheading mb-3">Shout! Media Productions</div>
