--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">윌비소프트</h3>
-                            <div class="subheading mb-3">정보기술기획팀/인턴</div>
+                            <div class="subheading mb-3 myfont">정보기술기획팀/인턴</div>
                             <p class="myfont">1. 관리자 모듈 VIP 서비스 기획</p>
                             <p class="myfont">2. 사용자 모듈 VIP 서비스 기획</p>
                         </div>
