--- a/index.html
+++ b/index.html
@@ -45,15 +45,19 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <br>
-                    <h1 class="mb-0 myfont">
-                        데이터 분석과 사용자 이해로 차별화된 서비스를 만드는  
+                        <h2 class="mb-0 myfont">
+                        데이터 분석과 사용자 이해로<br>
+                        차별화된 서비스를 만드는
                         <span class="text-primary">기획자</span>
+                        </h2>
                     </h1>
                     <div class="subheading mb-5">
                         <!-- <a href="mailto:u1995@naver.com">e-Mail : u1995@naver.com</a> -->
                     </div>
                     <p class="lead mb-5 myfont">
-                        사용자들의 불편함과 임직원들의 LMS의 불편함을 수용하여 프로그램 기획하며 흥미를 갖게되었습니다.
+                        ▷사용자 데이터와 관리자 피드백 분석을 통한 사용자 중심 문제 파악 및 개선 방향 도출<br>
+                        ▷개발, 디자인 부서와의 효과적인 협업 및 커뮤니케이션을 통한 사용자 중심 서비스 기획 및 실행<br>
+                        ▷기존 문제 상황에 대한 이해를 바탕으로 차별화된 서비스 기능 기획
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" target="_blank" href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin-in"></i></a>
