--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     <!-- <p><a target="_blank" class="myfont" style="font-weight: 700; text-decoration: none;" href="#">통합 포트폴리오</a></p> -->
                     <!-- 노션만들어서 넣기 -->
                     <p>
-                        <a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://www.figma.com/proto/8t8yJEImOCh8TfBV9pto5O/%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4?page-id=0%3A1&node-id=14-8&viewport=-102%2C352%2C0.12&t=UVsEc4jYYetdTZ0K-1&scaling=contain&content-scaling=fixed">
+                        <a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://www.figma.com/proto/8t8yJEImOCh8TfBV9pto5O/%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4_PM?page-id=0%3A1&node-id=389-629&viewport=598%2C281%2C0.06&t=BVJN2igR60YIps2U-1&scaling=contain&content-scaling=fixed">
                             PM포트폴리오
                         </a>
                     </p>
