--- a/index.html
+++ b/index.html
@@ -201,8 +201,13 @@
                     <!-- <p><a target="_blank" class="myfont" style="font-weight: 700; text-decoration: none;" href="#">통합 포트폴리오</a></p> -->
                     <!-- 노션만들어서 넣기 -->
                     <p>
+                        <a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://www.figma.com/proto/NDBQTj9AjbeWKx3eKcQAU3/%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4(%EC%84%9C%EB%B9%84%EC%8A%A4)?page-id=0%3A1&node-id=322-118&node-type=frame&viewport=585%2C-592%2C0.06&t=1LGxLPNJRgHiS0ri-1&scaling=contain&content-scaling=fixed">
+                            포트폴리오(서비스)
+                        </a>
+                    </p>
+                    <p>
                         <a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://www.figma.com/proto/8t8yJEImOCh8TfBV9pto5O/%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4_PM?page-id=0%3A1&node-id=389-629&viewport=598%2C281%2C0.06&t=BVJN2igR60YIps2U-1&scaling=contain&content-scaling=fixed">
-                            PM포트폴리오
+                            포트폴리오(기능)
                         </a>
                     </p>
                         <a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://rift-creator-fa9.notion.site/Backend-Team-Project-aa6859f197824d3a820e07369a59c36a?pvs=4">
