--- a/index.html
+++ b/index.html
@@ -206,6 +206,11 @@
                         </a>
                     </p>
                     <p>
+                        <a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://panoramic-tracker-bce.notion.site/CS-fff526729c8980508d2ed4d4f1d19825">
+                            포트폴리오(서비스) - 관련 기획안
+                        </a>
+                    </p>
+                    <p>
                         <a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://www.figma.com/proto/8t8yJEImOCh8TfBV9pto5O/%ED%8F%AC%ED%8A%B8%ED%8F%B4%EB%A6%AC%EC%98%A4_PM?page-id=0%3A1&node-id=389-629&viewport=598%2C281%2C0.06&t=BVJN2igR60YIps2U-1&scaling=contain&content-scaling=fixed">
                             포트폴리오(기능)
                         </a>
