--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
                 <div class="resume-section-content">
                     <br>
                         <h2 class="mb-0 myfont">
-                        데이터 분석과 사용자 이해로<br>
-                        차별화된 서비스를 만드는
-                        <span class="text-primary">기획자</span>
+                        한달에 4000명 고객을 만든 <span class="text-primary">기획자</span>입니다
                         </h2>
                     </h1>
                     <div class="subheading mb-5">
