--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         </a>
                     </p>
                     <p>
-                        <a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://panoramic-tracker-bce.notion.site/CS-fff526729c8980508d2ed4d4f1d19825">
+                        <a class="myfont" target="_blank" style="font-weight: 700; text-decoration: none;" href="https://panoramic-tracker-bce.notion.site/105526729c898004b8cbc28e26a3360b?pvs=4">
                             포트폴리오(서비스) - 관련 기획안
                         </a>
                     </p>
